[gd_scene load_steps=9 format=2]

[ext_resource path="res://codigo/telas/tela_jogo.gd" type="Script" id=1]
[ext_resource path="res://img/tela_jogo.png" type="Texture" id=2]
[ext_resource path="res://img/multi_1.png" type="Texture" id=3]
[ext_resource path="res://img/multi_2.png" type="Texture" id=4]
[ext_resource path="res://img/single_1.png" type="Texture" id=5]
[ext_resource path="res://img/single_2.png" type="Texture" id=6]
[ext_resource path="res://img/voltar.png" type="Texture" id=7]
[ext_resource path="res://img/voltar_2.png" type="Texture" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 1443.0
margin_bottom = 807.0
texture = ExtResource( 2 )

[node name="multi" type="TextureButton" parent="."]
margin_left = 646.0
margin_top = 490.0
margin_right = 1372.0
margin_bottom = 618.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="single" type="TextureButton" parent="."]
margin_left = 645.0
margin_top = 349.0
margin_right = 1349.0
margin_bottom = 474.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="voltar" type="TextureButton" parent="."]
margin_left = 761.0
margin_top = 649.0
margin_right = 1219.0
margin_bottom = 743.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
[connection signal="pressed" from="multi" to="." method="_on_multi_pressed"]
[connection signal="pressed" from="single" to="." method="_on_single_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
